force-app/main/default/objects/WBS_Dependency__c/WBS_Dependency__c.object-meta.xml
<CustomObject>
    <description>A single predecessor-to-successor link between two WBS items, carrying its own dependency type (FS/SS/FF/SF) and lag. Lets one task have many predecessors, the way Microsoft Project does.</description>
    <label>WBS Dependency</label>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WBS Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>