force-app/main/default/objects/WBS_Dependency__c/fields/Lag_Days__c.field-meta.xml
<CustomField>
    <fullName>Lag_Days__c</fullName>
    <label>Lag (working days)</label>
    <description>Working-day lag applied to the link. Negative values are leads (overlap).</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>