force-app/main/default/objects/WBS_Dependency__c/fields/Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Predecessor__c</fullName>
    <label>Predecessor</label>
    <description>The task that drives this link — its start or finish constrains the successor.</description>
    <type>Lookup</type>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipName>Successor_Links</relationshipName>
    <relationshipLabel>Successor Links</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>