force-app/main/default/objects/WBS_Dependency__c/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <label>Successor</label>
    <description>The dependent task — the one that cannot start/finish until the predecessor condition is met.</description>
    <type>MasterDetail</type>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipName>Predecessor_Links</relationshipName>
    <relationshipLabel>Predecessor Links</relationshipLabel>
</CustomField>